--- a/index.html
+++ b/index.html
@@ -267,6 +267,7 @@
 <head>
 <title>header search</title>
 <link rel="stylesheet" type="text/css" href="http://www.mathsjournal.org/Style.css" title="Variant Mini" media="screen,projection" />
+<script type="text/javascript" async="async" defer="defer" data-cfasync="false" src="https://mylivechat.com/chatinline.aspx?hccid=89964744"></script>
 </head>
 <body>
 	 	  	<div id="logo">
@@ -315,9 +316,11 @@
 
 <div class="divround2"   style=" border: 0px solid #0033CC; padding: 0px; " >
   <center><a href="http://www.mathsjournal.org/Joinus.html" title="callReviewers" target="blank"><img src="http://www.internationaljournalisar.org/images/callReviewers.jpg" alt="IJRET" width="170" height="95" /></a></center></div>
-
+<p align="center" style="font-size:12px; color:#000099"><a href="http://www.mathsjournal.org/indexing.html">and many more... </a></p>
 <!--<img src="http://www.mathsjournal.org/images/ISAR IJMCT_code.png" width="170" height="120" alt="QR-code" />-->
 			</div>
+
+
 
 
 
