--- a/publish_paper.html
+++ b/publish_paper.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
@@ -103,6 +104,7 @@
 <head>
 <title>header search</title>
 <link rel="stylesheet" type="text/css" href="http://www.mathsjournal.org/Style.css" title="Variant Mini" media="screen,projection" />
+<script type="text/javascript" async="async" defer="defer" data-cfasync="false" src="https://mylivechat.com/chatinline.aspx?hccid=89964744"></script>
 </head>
 <body>
 
@@ -121,62 +123,84 @@
 
 <div id="sidebarmulticenter">
 <div class="right">
-				<br/>
-				 <h4><center>Recent Updates ...</center> </h4>
-
-<div class="divround2"   style=" border: 0px solid #0033CC; padding: 0px; " >
-  <center><a href="http://www.mathsjournal.org/submit.html" title="Submit Papers"><img src="http://www.internationaljournalisar.org/images/SubmitArticles.jpg" alt="IJRET" width="180" height="100" /></a></center></div>
 
 
-<div class="divround2"   style=" border: 0px solid #0033CC; padding: 0px; " >
-  <center><a href="https://scholar.google.co.in/scholar?start=10&q=ijretjournal.org&hl=en&as_sdt=0,5" title="google scholar" target="blank"><img src="http://www.internationaljournalisar.org/images/google-scholar.png" alt="IJRET" width="170" height="80" /></a></center></div>
-
-<div class="divround2"   style=" border: 0px solid #0033CC; padding: 0px; " >
-  <center><a href="https://www.mendeley.com/profiles/isar---international-scientif/?viewAsOther=true" title="mendaly" target="blank"><img src="http://www.internationaljournalisar.org/images/mendaly.png" alt="IJRET" width="150" height="60" /></a></center></div>
-
-<div class="divround2"   style=" border: 0px solid #0033CC; padding: 0px; " >
-  <center><a href="http://www.internationaljournalisar.org" title="Journals" target="blank"><img src="http://www.internationaljournalisar.org/images/jounals.png" alt="IJRET" width="180" height="110" /></a></center></div>
-
-<div class="divround2"   style=" border: 0px solid #0033CC; padding: 0px; " >
-  <center><a href="http://www.researcherid.com/rid/M-2299-2016" title="thomson" target="blank"><img src="http://www.internationaljournalisar.org/images/thomson.png" alt="IJRET" width="170" height="80" /></a></center></div>
-
-<div class="divround2"   style=" border: 0px solid #0033CC; padding: 0px; " >
-  <center><a href="http://journalseeker.researchbib.com/view/issn/2455-7994" title="researchbib" target="blank"> <img src="http://www.internationaljournalisar.org/images/journalseeker.png" alt="IJRET" width="170" height="65" /></a></center></div>
-
-
-<div class="divround2"   style=" border: 0px solid #0033CC; padding: 0px; " >
-  <center><a href="https://independent.academia.edu" title="academia" target="blank"><img src="http://www.internationaljournalisar.org/images/academia.jpg" alt="IJRET" width="170" height="105" /></a></center></div>
-
-
-<div class="divround2"   style=" border: 0px solid #0033CC; padding: 0px; " >
-  <center><a href="https://www.slideshare.net" title="slideshare" target="blank"><img src="http://www.internationaljournalisar.org/images/slideshare.jpg" alt="IJRET" width="170" height="85" /></a></center></div>
-
-<div class="divround2"   style=" border: 0px solid #0033CC; padding: 0px; " >
-  <center><a href="http://www.mathsjournal.org/Joinus.html" title="callReviewers" target="blank"><img src="http://www.internationaljournalisar.org/images/callReviewers.jpg" alt="IJRET" width="170" height="95" /></a></center></div>
-
-<img src="http://www.mathsjournal.org/images/ISAR IJMCT_code.png" width="170" height="120" alt="QR-code" />
 			</div>
+
 
 <center><a href="http://www.mathsjournal.org/callforpaper.html"><font face="arial" font color="#08088A" font size="4"><strong><u><span class="monthDemo"></span><img src="http://www.mathsjournal.org/images/new.gif" align="#" style="margin:0px"></u></strong></font></a></center><br><br>
 
 
 
-<p><ul><font face="arial" font color="" font size="3">
-        <li class="title"><font face="arial" font color="" font size="4"><u>How to publish paper / How to write paper :</u></font></li><br>
-        <li>1.	Author name and affiliations</li>
-        <li>2.	Abstract: (Brief knowledge about paper work with its application)</li>
-        <li>3.	Introduction: (What does this paper explain)</li>
-        <li>4.	Literature Survey: ( Author have to write here the relevant past review of your research for better understanding of your new research)</li>
-        <li>5.	Research Elaborations : (Here you have to explain your research work)</li>
-        <li>6.	Result and Discussion: ( Here you have to write result of your research with future scope)</li>
-        <li>7.	Conclusion: (It is summarize view of paper)</li>
-        <li>8.	References: ( Which you had used in the literature survey)</li>
-        <li>&nbsp;</li>
+<font face="Cambria" font size="3">
+<p><strong>1 .<font color="blue"> Author Guidelines</font></strong></p>
+<p>Authors should submit only papers that have been carefully proof read and polished. Before submission please make sure that your paper is prepared using the journal paper template. This will ensure fast processing and publication. Acceptance or rejection notification will be sent to all authors.</p>
 
-        <li>Click here for <a href="#" class="text2">Paper preparation guidelines</a><br>
-         Click here for <a href="#" class="text2">submit your paper</a></li></font>
+<p><strong>2 .<font color="blue"> Read existing Papers</font></strong></p>
+<p>Read everything that might be relevant gives you different perspective of the focus topic. But be selective too, for not getting to much deviated from you topic of interest. Getting used to simulation software is much useful for simulating your work. You can find a lot of time during the days and utilize those holidays & free days.</p>
 
-      </ul>  </p>
+<p><strong>3 .<font color="blue"> Original Research Papers</font></strong></p>
+<p>Case studies.<br/>Review articles.<br/>Technical Notes.<br/>
+<p>ISAR publishes work that contributes significantly to the scientific knowledge in computer sciences and Engineering fields.
+The manuscripts must be single-spaced typed, written in fair grammatical English. Latin plurals should not be used if the English equivalent has become the accepted form, e.g., formulas not formulae. Use of hyphens, capital letters and numbers written or spelled out (e.g., 8 or eight) should be consistent throughout the manuscript.</p>
+
+<p><strong>4 .<font color="blue"> Instructions</font></strong></p>
+<p>Authors are invited to submit papers for publication using through email <strong><a>(respective journal mail id)</a></strong> Submissions are accepted for review with the understanding that the same work has been neither submitted to, nor published in, another publication. Instructions on how to use the online submission tool are available at the home page. Manuscripts submitted to the journal are accepted on the basis of following criteria.</p>
+<p>1. All manuscripts must be in English and in MS Word format.<br>
+2. They have not been published in whole or in part in any other journal.<br>
+3. The e-mail addresses and telephone numbers of all authors must be provided.<br>
+4. Illustrations (figures) of manuscripts should be in computer format.<br>
+5. Authors must state in a covering letter when submitting papers for publication the novelty embodied in their work or in the approach taken in their research.<br>
+6. Manuscripts submitted under multiple authors are reviewed on the assumption that all listed authors concur with the submission and that a copy of the final manuscript has been approved by all authors.</p>
+
+<p><strong>5 .<font color="blue"> Anatomy of Paper</font></strong></p>
+<p>Generally a paper has seven sections and a maximum of four pages. They are<br>
+1. Abstract,<br>
+2. Introduction,<br>
+3. Existing techniques,<br>
+4. Your contribution,<br>
+5. Results and<br>
+6. Conclusion.</p>
+
+<p><strong>6 .<font color="blue"> The procedure </font></strong></p>
+<p>As a part of your paper publication, you can start documenting the 'existing techniques' from the scrap journal you did during the studies. Here you have to extract what all are the techniques existing as a solution for the particular problem and the pros and cons of those.
+Next, document the 'introduction' about what is the topic and what you are going to do. Better to keep it short. Follows your contribution and the simulated results.<br>
+1. Describe the problem<br>2. State your contributions<br><br>
+
+
+'Abstract' is one section you can work on in the last, as it has to cover the all the sections very briefly. Please note that Abstract makes the committee members to decide whether or not to read your paper. Generally four lines are sufficient for this.<br>
+1. State the problem<br>2. Say why it's an interesting problem<br>3. Say what your solution achieves<br>4. Say what follows from your solution<p>
+
+<p><strong>7 .<font color="blue"> The procedure </font></strong></p>
+<p>The divide-and-conquer strategy works on a day-to-day level as well. Instead of writing an entire paper, focus on the goal of writing a section, or outline. Remember, every task you complete gets you closer to finishing your paper.</p>
+
+<p><strong>8 .<font color="blue"> Get a pre-review </font></strong></p>
+<p>Now your paper is ready. You can ask your peers or professors to review your paper. Next is to find the right place to publish it. You can start of with national level conferences, which often gets conducted in many universities. Then once you gain a level of confidence, you can proceed to international conferences and journals.</p>
+
+<p><strong>9 .<font color="blue"> Read the reviews carefully  </font></strong></p>
+<p>This is really, really, really hard. Only a small proportion, 5 to 10 percent, are accepted the first time they are submitted, and usually they are only accepted subject to revision. In fact, anything aside from simply "reject," Neal-Barnett reminds, is a positive review. These include:<br><br>* Accept: "Which almost nobody gets," she says.<br>
+* Accept with revision: "Just make some minor changes."<br>
+* Revise and resubmit: "They're still interested in you!"<br>
+* Reject and resubmit: Though not as good as revise and resubmit, "they still want the paper!"<br>
+Read every criticism as a positive suggestion for something you could explain more clearly</p>
+
+<p><strong>10 .<font color="blue"> Don't panic  </font></strong></p>
+<p>After reading the review the first time, put it aside. Come back to it later, reading the paper closely to decide whether the criticisms were valid and how you can address them. You will often find that reviewers make criticisms that are off-target because they misinterpreted some aspect of your paper. If so, don't let it get to you -- just rewrite that part of your paper more clearly so that the same misunderstanding won't happen again.<br><br>It's frustrating to have a paper rejected because of a misunderstanding, but at least it's something you can fix. On the other hand, criticisms of the content of the paper may require more substantial revisions -- rethinking your ideas, running more tests, or redoing an analysis..</p>
+
+
+<p><strong>11 .<font color="blue">Rejected? Be Positive </font></strong></p>
+<p>If your paper is rejected, keep trying! Take the reviews to heart and try to rewrite the paper, addressing the reviewer's comments. "Remember, to get a lot of publications, you also will need to get lots of rejections," says Edward Diener, PhD, editor of APA's Journal of Personality and Social Psychology: Personality Processes and Individual Differences.</p>
+
+<p><strong>12 .<font color="blue">Common mistakes </font></strong></p>
+<p>Wrong sequence in Figure and Table numbering<br>Misalignment of columns<br>Usage of figures from another paper without credit and permission</p>
+
+
+<p><strong>13 .<font color="blue">Where to publish </font></strong></p>
+<p>Generally, there are three main choices:<br><br>
+* National Conference: A conference is the right place for beginner scholars, since the level of scrutiny is minimal. The conferences will accept papers which details about the comparison of existing technologies, mathematically proven but practically unproven proposals, etc.<br><br>
+
+* International Conference: A conference is the good play ground for Intermediated scholars. This mostly same as National Conference but the securitization will be more.</font></p><br/></font>
+
 
 
 
