--- a/ContactUs.html
+++ b/ContactUs.html
@@ -107,6 +107,7 @@
 <head>
 <title>header search</title>
 <link rel="stylesheet" type="text/css" href="http://www.mathsjournal.org/Style.css" title="Variant Mini" media="screen,projection" />
+<script type="text/javascript" async="async" defer="defer" data-cfasync="false" src="https://mylivechat.com/chatinline.aspx?hccid=89964744"></script>
 </head>
 <body>
 
@@ -159,8 +160,9 @@
    <center><a href="http://www.mathsjournal.org/Joinus.html" title="callReviewers" target="blank"><img src="http://www.internationaljournalisar.org/images/callReviewers.jpg" alt="IJRET" width="170" height="95" /></a></center></div>
 
 <img src="http://www.mathsjournal.org/images/ISAR IJMCT_code.png" width="170" height="120" alt="QR-code" />
-			</div>
 
+<p align="center" style="font-size:12px; color:#000099"><a href="http://www.mathsjournal.org/indexing.html">and many more... </a></p>
+</div>
 
 
 
