--- a/CurrentIssues.html
+++ b/CurrentIssues.html
@@ -37,7 +37,7 @@
 
   </script>
 
-
+<script type="text/javascript" async="async" defer="defer" data-cfasync="false" src="https://mylivechat.com/chatinline.aspx?hccid=89964744"></script>
 </head>
 
 <body>
