--- a/aimscope.html
+++ b/aimscope.html
@@ -158,9 +158,9 @@
     <center><a href="http://www.mathsjournal.org/Joinus.html" title="callReviewers" target="blank"><img src="http://www.internationaljournalisar.org/images/callReviewers.jpg" alt="IJRET" width="170" height="95" /></a></center></div>
 
   <img src="http://www.mathsjournal.org/images/ISAR IJMCT_code.png" width="170" height="120" alt="QR-code" />
-			</div>
-
-
+<div>			</div>
+<p align="center" style="font-size:12px; color:#000099"><a href="http://www.mathsjournal.org/indexing.html">and many more... </a></p>
+</div>
 
 
 <center><a href="http://www.internationaljournalisar.org/callforpaper.html"><font face="arial" font color="#08088A" font size="4"><strong><u><span class="monthDemo"></span><img src="http://www.mathsjournal.org/images/new.gif" align="#" style="margin:0px"></u></strong></font></a></center><br><br>
