updated link code submit page

--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-	<meta name="description" content="Your description goes here" />
-	<meta name="keywords" content="ISAR IJMCT,ISAR IJMCT journal,ijert,ijcse,ISAR - International Journal of Mathematics and Computing Techniques,engineering journals, scientific Research journals, engineering Science  journal, engineering research journals,Engineering Application online journal, electronic journal, Engineering journal, scientific journal, Research journals, international journal of Engineering Application and Technology,Top indexed journal, High Impact, scopus indexed journal,ijca,ijcst,ijc,Best Online Journals, Computer Science Journal,Journal with Impact Factor,Best Electronic Journal,Best Management Journal,Best Engineering Journal,Best International Journal , computer science online journal, computer science electronic journal, computer journal, scientific journal, computer research journal." />
-	<link rel="icon" type="image/png" href="http://www.mathsjournal.org/images/myicon.jpg" />
-	<meta name="author" content="www.mathsjournal.org" />
-	<link rel="stylesheet" type="text/css" href="http://www.mathsjournal.org/Style.css" title="Variant Mini" media="screen,projection" />
-	<link rel="stylesheet" type="text/css" href="Styles/global.css" />
-	<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
-	<title>ISAR IJMCT - ISAR - International Journal of Mathematics and Computing Techniques </title>
-    <style type="text/css">
-    </style>
+
+<meta name="author" content="http://www.mathsjournal.org">
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<meta name="keywords" content=" ISAR - International Scientific and Research Journals, ISAR - International Journal of Mathematics and Computing Techniques ,Mathematics Network Journal, Mathematics Journal Best Online Journals, Computer Mathematics Journal, Impact Factor, Mathematics Journal, Network Mathematics Journal International Mathematics Journal, Mathematics research and technology" />
+<meta name="author" content="ISAR -IJMCT"  />
+<meta name="citation_publisher" content="International Scientific and Research" />
+<link rel="icon" type="image/png" href="http://www.mathsjournal.org/images/myicon.jpg" />
+<meta name="citation_journal_title" content=" International Scientific and Research " />
+<meta name="citation_language" content="English" />
+<meta name="description" content="ISAR - International Journal of Mathematics and Computing Techniques" />
+<meta name="google-site-verification=7yFe4uCl2aW5c_wKoCXy5HGXK_0VdDvEHMSDiqqx7sM" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
+<title>ISAR IJMCT - ISAR - International Journal of Mathematics and Computing Techniques </title>
+<style type="text/css">
+</style>
 
  <script type="text/javascript">
       function myFunction() {
@@ -143,7 +148,7 @@
 
 <div id="popup_box">
 <center><img src="http://www.internationaljournalisar.org/images/myicon.jpg" alt="ISAR" width="55" height="55" /></center>
-<center><strong><a href="http://www.internationaljournalisar.org/callforpaper.html" target="blank">ISAR  Call for Papers in original research article, Review Papers, long papers, white papers and short papers</a></strong></center><br><br><br>
+<center><strong><a href="http://www.mathsjournal.org/callforpaper.html" target="blank">ISAR  Call for Papers in original research article, Review Papers, long papers, white papers and short papers</a></strong></center><br><br><br>
 
 <p>1. <a href="http://www.internationaljournalisar.org"><font color="#086A87">International Scientific and Research Group</a></font></p>
 <p>2. <font color="#086A87"> Submit Paper</font><stong><a href="http://www.internationaljournalisar.org/Submit-Paper.html" target="blank"> respective journal mail id.</a></stong></p>
@@ -231,19 +236,19 @@
         });
     </script>
 
-<!--<IJMCT>-->
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+ <!--<IJMCT>-->
+     <script>
+       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+       })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+       ga('create', 'UA-71638505-1', 'auto');
+       ga('create', 'UA-77439571-1', 'auto');
+       ga('send', 'pageview');
 
-    ga('create', 'UA-77439571-1', 'auto');
-    ga('send', 'pageview');
+   </script>
 
-</script>
-
-<!--<Maths Journal>-->
+   <!--<Maths Journal>-->
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -251,7 +256,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-77439571-2', 'auto');
+  ga('create', 'UA-105119513-1', 'auto');
   ga('send', 'pageview');
 
 </script>
@@ -262,8 +267,8 @@
 
 <div id="wrap">
 	<div id="header">
-	  <div><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+	  <div><!DOCTYPE html>
+<html>
 <head>
 <title>header search</title>
 <link rel="stylesheet" type="text/css" href="http://www.mathsjournal.org/Style.css" title="Variant Mini" media="screen,projection" />
