--- a/Vol1IssueNo.4.html
+++ b/Vol1IssueNo.4.html
@@ -1,41 +1,46 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<meta name="description" content="Your description goes here" />
-	<meta name="keywords" content="IJCATR, IJCAT,  International journal of computer applications,International journal of computer application,  International journal of computer applications, technology and research, International journal of computer science, International journal of computer science research, International journal of computer science issues, International journal of research in computer science,  International journal of computer science research  applications and technology, International journal of computer technology,  ijcatr.com, best online journal, best online computer journal,journal,scientific journal,scientific journal online,computer journal, computer science journal, computer applications journal, computer technology journal, best online journal, IJCA , IJC ,ISAR IJMCTA ,ISAR IJMCT, research journal, peer review journal, Association of Technology and Science" />
+
+<meta name="author" content="http://www.mathsjournal.org">
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<meta name="keywords" content=" ISAR - International Scientific and Research Journals, ISAR - International Journal of Mathematics and Computing Techniques ,Mathematics Network Journal, Mathematics Journal Best Online Journals, Computer Mathematics Journal, Impact Factor, Mathematics Journal, Network Mathematics Journal International Mathematics Journal, Mathematics research and technology" />
+<meta name="author" content="ISAR -IJMCT"  />
+<meta name="citation_publisher" content="International Scientific and Research" />
 <link rel="icon" type="image/png" href="http://www.mathsjournal.org/images/myicon.jpg" />
-	<meta name="author" content="ijcatr.com" />
-	<link rel="stylesheet" type="text/css" href="http://www.mathsjournal.org/Style.css" title="Variant Mini" media="screen,projection" />
-	<link rel="stylesheet" type="text/css" href="Styles/global.css" />
-	<title>ISAR IJMCT - Call For Paper Volume 2, Issue 3</title>
-    <style type="text/css">
-    </style>
+<meta name="citation_journal_title" content=" International Scientific and Research " />
+<meta name="citation_language" content="English" />
+<meta name="description" content="ISAR - International Journal of Mathematics and Computing Techniques" />
+<meta name="google-site-verification=7yFe4uCl2aW5c_wKoCXy5HGXK_0VdDvEHMSDiqqx7sM" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<title>ISAR IJMCT - Call For Paper Volume 2, Issue 3</title>
+<style type="text/css">
+</style>
 
-  <!--<IJMCT>-->
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+ <!--<IJMCT>-->
+     <script>
+       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+       })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+       ga('create', 'UA-71638505-1', 'auto');
+       ga('create', 'UA-77439571-1', 'auto');
+       ga('send', 'pageview');
 
-      ga('create', 'UA-77439571-1', 'auto');
-      ga('send', 'pageview');
+   </script>
 
-  </script>
+   <!--<Maths Journal>-->
 
-  <!--<Maths Journal>-->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-105119513-1', 'auto');
+  ga('send', 'pageview');
 
-    ga('create', 'UA-77439571-2', 'auto');
-    ga('send', 'pageview');
-
-  </script>
+</script>
 
 
 </head>
@@ -45,8 +50,8 @@
 
 <div id="wrap">
 	<div id="header">
-	  <div><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+	  <div><!DOCTYPE html>
+<html>
 <head>
 <title>header search</title>
 <link rel="stylesheet" type="text/css" href="http://www.mathsjournal.org/Style.css" title="Variant Mini" media="screen,projection" />
@@ -57,6 +62,7 @@
 <link rel="stylesheet" type="text/css" href="http://www.mathsjournal.org/reveal.css">
 <script type="text/javascript" src="http://www.mathsjournal.org/jquery.reveal.js"></script>
 <script type="text/javascript" src="http://www.mathsjournal.org/jquery-1.6.min.js"></script>
+<script type="text/javascript" async="async" defer="defer" data-cfasync="false" src="https://mylivechat.com/chatinline.aspx?hccid=89964744"></script>
 
 
 </head>
