--- a/aimscope.html
+++ b/aimscope.html
@@ -1,31 +1,37 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<meta name="description" content="Your description goes here" />
-	<meta name="keywords" content="ISAR IJMCT,ISAR IJMCT journal,ijert,ijcse,ISAR - International Journal of Mathematics and Computing Techniques,engineering journals, scientific Research journals, engineering Science  journal, engineering research journals,Engineering Application online journal, electronic journal, Engineering journal, scientific journal, Research journals, international journal of Engineering Application and Technology,Top indexed journal, High Impact, scopus indexed journal,ijca,ijcst,ijc,Best Online Journals, Computer Science Journal,Journal with Impact Factor,Best Electronic Journal,Best Management Journal,Best Engineering Journal,Best International Journal , computer science online journal, computer science electronic journal, computer journal, scientific journal, computer research journal." />
+
+<meta name="author" content="http://www.mathsjournal.org">
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<meta name="keywords" content=" ISAR - International Scientific and Research Journals, ISAR - International Journal of Mathematics and Computing Techniques ,Mathematics Network Journal, Mathematics Journal Best Online Journals, Computer Mathematics Journal, Impact Factor, Mathematics Journal, Network Mathematics Journal International Mathematics Journal, Mathematics research and technology" />
+<meta name="author" content="ISAR -IJMCT"  />
+<meta name="citation_publisher" content="International Scientific and Research" />
 <link rel="icon" type="image/png" href="http://www.mathsjournal.org/images/myicon.jpg" />
-	<meta name="author" content="ijcatr.com" />
-	<link rel="stylesheet" type="text/css" href="#" title="Variant Mini" media="screen,projection" />
-	<link rel="stylesheet" type="text/css" href="Styles/global.css" />
-	<title>ISAR IJMCT - Aim and Scope </title>
-    <style type="text/css">
-    </style>
+<meta name="citation_journal_title" content=" International Scientific and Research " />
+<meta name="citation_language" content="English" />
+<meta name="description" content="ISAR - International Journal of Mathematics and Computing Techniques" />
+<meta name="google-site-verification=7yFe4uCl2aW5c_wKoCXy5HGXK_0VdDvEHMSDiqqx7sM" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<title>ISAR IJMCT - Aim and Scope </title>
+<style type="text/css">
+</style>
+
  <title>ISAR IJMCT : ISAR - International Journal of Mathematics and Computing Techniques</title>
 
-<!--<IJMCT>-->
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+   <!--<IJMCT>-->
+     <script>
+       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+       })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+       ga('create', 'UA-71638505-1', 'auto');
+       ga('create', 'UA-77439571-1', 'auto');
+       ga('send', 'pageview');
 
-    ga('create', 'UA-77439571-1', 'auto');
-    ga('send', 'pageview');
+   </script>
 
-</script>
-
-<!--<Maths Journal>-->
+   <!--<Maths Journal>-->
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -33,7 +39,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-77439571-2', 'auto');
+  ga('create', 'UA-105119513-1', 'auto');
   ga('send', 'pageview');
 
 </script>
@@ -101,11 +107,13 @@
 
 <div id="wrap">
 	<div id="header">
-	  <div><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+	  <div><!DOCTYPE html>
+<html>
 <head>
 <title>header search</title>
 <link rel="stylesheet" type="text/css" href="http://www.mathsjournal.org/Style.css" title="Variant Mini" media="screen,projection" />
+<script type="text/javascript" async="async" defer="defer" data-cfasync="false" src="https://mylivechat.com/chatinline.aspx?hccid=89964744"></script>
+
 </head>
 <body>
 
@@ -163,7 +171,7 @@
 </div>
 
 
-<center><a href="http://www.internationaljournalisar.org/callforpaper.html"><font face="arial" font color="#08088A" font size="4"><strong><u><span class="monthDemo"></span><img src="http://www.mathsjournal.org/images/new.gif" align="#" style="margin:0px"></u></strong></font></a></center><br><br>
+<center><a href="http://www.mathsjournal.org/callforpaper.html"><font face="arial" font color="#08088A" font size="4"><strong><u><span class="monthDemo"></span><img src="http://www.mathsjournal.org/images/new.gif" align="#" style="margin:0px"></u></strong></font></a></center><br><br>
 
     <font color="#FF4000" font size="4"><u>ISAR IJMCT Aim and Scope</u></font></font><br><br>
    <p align="justify" style="font-size:14px; font-family:'Times New Roman', Times, serif;color:#000000">Authors are invited to submit unpublished papers which are  not review in any other journal or conference.This international journal is directed to research articles, reviews, case studies, guest edited thematic issues and short communications/letters in all areas of mathematics, applied mathematics, applied commutative algebra and algebraic geometry, mathematical biology, physics and engineering, theoretical bioinformatics, experimental mathematics, theoretical computer science, numerical computation and applications of systems, partial differential and differential equations, integral and integral differential equations and mathematical modeling  <br />
