--- a/callforpaper.html
+++ b/callforpaper.html
@@ -313,7 +313,7 @@
 <font face="arial" font color="" font size="3"><strong>Topics:</strong><br></font><br>
 
 <font face="arial" color="brown"font size="3">All areas related to engineering research fields are covered under ISAR IJMCT.<br></font><br>
-<font face="arial" font size="3">The topics are not limited to the list that is available<strong> <a href="http://www.mathsjournal.org/aimscope.html">at this link.</a></font></strong><br><br><br><br>
+<font face="arial" font size="3">The topics are not limited to the list that is available<strong> <a href="http://www.mathsjournal.org/Topics.html">at this link.</a></font></strong><br><br><br><br>
 
 
 <!--<font face="arial" font color="" font size="3"><strong>Publication Charges:</strong><br></font><br>
