--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
         <li><img src="http://www.mathsjournal.org/images/arrow.gif" align="left" style="margin:0px">Statistics of each article as no. of times it viewed and downloaded</li>
 	<li><img src="http://www.mathsjournal.org/images/arrow.gif" align="left" style="margin:0px">Fast publication process</li>
 	<li><img src="http://www.mathsjournal.org/images/arrow.gif" align="left" style="margin:0px">Proper peer review process</li>
-        <li><img src="http://www.mathsjournal.org/images/arrow.gif" align="left" style="margin:0px">Computer science Engineering</li>
+        <li><img src="http://www.mathsjournal.org/images/arrow.gif" align="left" style="margin:0px">Mathematics and Computing Techniques</li>
 	<li><img src="http://www.mathsjournal.org/images/arrow.gif" align="left" style="margin:0px">Suggestion to author if article need modification</li>
         <li><img src="http://www.mathsjournal.org/images/arrow.gif" align="left" style="margin:0px">Journal publishes online as well as print version.</li>
 
