--- a/CurrentIssues.html
+++ b/CurrentIssues.html
@@ -13,10 +13,9 @@
 <meta name="description" content="ISAR - International Journal of Mathematics and Computing Techniques" />
 <meta name="google-site-verification=7yFe4uCl2aW5c_wKoCXy5HGXK_0VdDvEHMSDiqqx7sM" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<title>ISAR IJMCT - Call For Paper Volume 2, Issue 3</title>
+<title>ISAR IJMCT - Call For Paper Volume 2, Issue 4</title>
 <style type="text/css">
 </style>
-
 
  <!--<IJMCT>-->
      <script>
@@ -43,7 +42,7 @@
 
 </script>
 
-<script type="text/javascript" async="async" defer="defer" data-cfasync="false" src="https://mylivechat.com/chatinline.aspx?hccid=89964744"></script>
+
 </head>
 
 <body>
@@ -60,14 +59,14 @@
 <script type="text/javascript" src="http://www.mathsjournal.org/js/jquery.reveal.js"></script>
 <script type="text/javascript" src="http://www.mathsjournal.org/js/jquery-1.6.min.js"></script>
 
-<link rel="stylesheet" type="text/css" href="http://www.mathsjournal.org/reveal.css">
-<script type="text/javascript" src="http://www.mathsjournal.org/jquery.reveal.js"></script>
-<script type="text/javascript" src="http://www.mathsjournal.org/jquery-1.6.min.js"></script>
+<link rel="stylesheet" type="text/css" href="http://www.ijretjournal.org/reveal.css">
+<script type="text/javascript" src="http://www.ijretjournal.org/jquery.reveal.js"></script>
+<script type="text/javascript" src="http://www.ijretjournal.org/jquery-1.6.min.js"></script>
+<script type="text/javascript" async="async" defer="defer" data-cfasync="false" src="https://mylivechat.com/chatinline.aspx?hccid=89964744"></script>
 
 
 </head>
 <body>
-
 	 	  	<div id="logo">
 			<img src="http://www.mathsjournal.org/images/title1.jpg" alt="IJMCT - ISAR Journals" width="977" height="220" />
 
@@ -85,7 +84,7 @@
  <center><font size="3" font color="#045FB4">submit your article : IJMCTchief@gmail.com</font></center></p><br><br>
 
 
-<center><strong><font face="arial" size="5" color="#DF7401">Volume 1, Issue 4,  July - August 2017</font></strong></center>
+<center><strong><font face="arial" size="5" color="#DF7401">Volume 1, Issue 4,  September - October 2017</font></strong></center>
 
 
 <table width="735" bgcolor="" border="1">
@@ -106,10 +105,10 @@
 
                         </tr>
 
-<!--<tr class="style13" valign="top">
+<tr class="style13" valign="top">
 <td height="58" td width="30"><div align="center" class="style16"><b>1</b></td>
-<td><span class="style28"><span class="style55" > <font size="3" font color="brown"><b> Continuous user verification in social networking sites using facial Recognition </b></font></br>
-<span class="style"><font align="left" size="2">-  D.Prabu, E.DilipKumar, </font></span><br/></span></a>
+<td><span class="style28"><span class="style55" > <font size="3" font color="brown"><b> Boundary Value Problems for First Order Complex Partial Differential Equations in a Ring Domain </b></font></br>
+<span class="style"><font align="left" size="2">-  S.Sangeetha, S.Tamilarasi </font></span><br/></span></a>
 
 <div id="content-dece">
 <ul>
@@ -118,14 +117,14 @@
 <a href="http://www.mathsjournal.org/Volume1/Issue4/IJMCT-V1I4P1.pdf" target="balnk"><font size="2" style="margin:-1px">[ PDF ]</font></a>
 
 <div id="1" class="reveal-modal">
-<font color="#0B0B61" font size="3">Abstract</font><br><br><font size ="2">This paper proposes a service operator-aware trust scheme (SOTS) for resource matchmaking across multiple clouds. Through analyzing the built-in relationship between the users, the broker, and the service resources, this paper proposes a middleware framework of trust management that can effectively reduce user burden and improve system dependability. Based on multi-dimensional resource service operators, we model the problem of trust evaluation as a process of multi-attribute decision-making, and develop an adaptive trust evaluation approach based on information entropy theory. This adaptive approach can overcome the limitations of traditional trust schemes, whereby the trusted operators are weighted manually or subjectively. As a result, using SOTS, the broker can efficiently and accurately prepare the most trusted resources in advance, and thus provide more dependable resources to users. Our experiments yield interesting and meaningful observations that can facilitate the effective utilization of SOTS in a large-scale multi-cloud environment.<br /><br /><strong><font color="#FF0000" font size="3">Keyword: </font></strong>Multiple Clouds, Middleware framework, Matchmaking.</font></p>
+<font color="#0B0B61" font size="3">Abstract</font><br><br><font size ="2">The theory of boundary value problems for complex partial differential equation combines knowledge and methods from many fields of mathematics, i.e. complex analysis, partial differential equations, functional analysis, equations of mathematical physics etc.<br /><br /><strong><font color="#FF0000" font size="3">Keyword: </font></strong>- - -.</font></p>
 <a class="close-reveal-modal">&#215;</a></div>
 
 <div id="2" class="reveal-modal">
-<img src="http://www.mathsjournal.org/images/IJMCT-citation.gif" alt="IJMCT - ISAR Journals" title="ISAR IJMCT citation" width="80"  height="10" >
-<strong></strong><p class="bord"><font size ="2">  D.Prabu, E.DilipKumar , <font color="red"><em><strong>"Continuous user verification in social networking sites using facial Recognition"</strong></em></font> Vol. 1 - Issue 1  ( 1 - 5) -  May - June 2016 ,<strong> ISAR - International Journal of Mathematics and Computing Techniquess (ISAR IJMCT) </strong>, ISSN: 2455- 7994, www.mathsjournal.org</font></p><a class="close-reveal-modal">&#215;</a></div></div></td>
+<img src="http://www.ijretjournal.org/images/IJRET-citation.gif" alt="IJMCT - ISAR Journals" title="ISAR IJMCT citation" width="80"  height="10" >
+<strong></strong><p class="bord"><font size ="2">  S.Sangeetha, S.Tamilarasi , <font color="red"><em><strong>"Boundary Value Problems for First Order Complex Partial Differential Equations in a Ring Domain "</strong></em></font> Vol. 1 - Issue 1  ( 1 - 5) -  May - June 2016 ,<strong> ISAR - International Journal of Mathematics and Computing Techniquess (ISAR IJMCT) </strong>, ISSN: 2455- 7994, www.mathsjournal.org</font></p><a class="close-reveal-modal">&#215;</a></div></div></td>
 
-<td><div align="center" class="style13"><br /><br><br><b>IJMCT-V1I4P1</b></div></span></span><span class="style27"><strong><span class="style11">-->
+<td><div align="center" class="style13"><br /><br><br><b>IJMCT-V1I4P1</b></div></span></span><span class="style27"><strong><span class="style11">
 
 
 
