--- a/instructions.html
+++ b/instructions.html
@@ -133,7 +133,7 @@
 				 <h4><center>Recent Updates ...</center> </h4>
 
 <div class="divround2"   style=" border: 0px solid #0033CC; padding: 0px; " >
-  <center><a href="http://www.mathsjournal.org/submit.html" title="Submit Papers"><img src="http://www.internationaljournalisar.org/images/SubmitArticles.jpg" alt="IJRET" width="180" height="100" /></a></center></div>
+  <center><a href="http://ems.mathsjournal.org/menuscript.php" title="Submit Papers" target="blank"><img src="http://www.internationaljournalisar.org/images/SubmitArticles.jpg" alt="IJRET" width="180" height="100" /></a></center></div>
 
 
 <div class="divround2"   style=" border: 0px solid #0033CC; padding: 0px; " >
