--- a/copyright-infringement.html
+++ b/copyright-infringement.html
@@ -345,8 +345,8 @@ JCEMediaBox.init({popup:{width:"",height:"",legacy:0,lightbox:0,shadowbox:0,resi
         <div class="inner">
 				<div class="h3c"><div class="h3r"><div class="h3l"><h3 class="module-title">IJMCT -Updates</h3></div></div></div>
 			    <div class="module-body">
-	        <a href="http://ems.ijp2p.org/ems.php" title="EMS " target="blank"><img src="/images/conf.jpg" alt="ISAR" width="160" height="80" /></a><br>
-               <a href="http://ems.ijp2p.org/ems.php" title="EMS" target="blank"><img src="/images/apr.jpg" alt="ISAR" width="150" height="70" /></a><br>
+	        <a href="http://ems.mathsjournal.org/ems.php" title="EMS " target="blank"><img src="/images/conf.jpg" alt="ISAR" width="160" height="80" /></a><br>
+               <a href="http://ems.mathsjournal.org/ems.php" title="EMS" target="blank"><img src="/images/apr.jpg" alt="ISAR" width="150" height="70" /></a><br>
         </div>
         </div>
 	</div><br>
