--- a/CurrentIssues.html
+++ b/CurrentIssues.html
@@ -13,7 +13,7 @@
 <meta name="description" content="ISAR - International Journal of Mathematics and Computing Techniques" />
 <meta name="google-site-verification=7yFe4uCl2aW5c_wKoCXy5HGXK_0VdDvEHMSDiqqx7sM" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<title>IJMCT - Volume 1 Issue 4 </title>
+<title>IJMCT - Volume 1 Issue 5 </title>
 <style type="text/css">
 </style>
 
@@ -290,7 +290,7 @@ JCEMediaBox.init({popup:{width:"",height:"",legacy:0,lightbox:0,shadowbox:0,resi
 
 <span style="font-family: cambria; font-size: 14pt;"><font color="#FF4000"><u><center>ISAR International Journal of Mathematics and Computing Techniques</u></center></font></span><br>
 
-<p><center><font size="4">Volume 1 Issue 4 - Sep - Oct 2017</font></center></p>
+<p><center><font size="4">Volume 1 Issue 5 - Nov - Dec 2017</font></center></p>
 
 <table style="width: 700px; height: 152px;" border="1">
 <tbody>
@@ -301,39 +301,9 @@ JCEMediaBox.init({popup:{width:"",height:"",legacy:0,lightbox:0,shadowbox:0,resi
 <tr style="height: 69px;"><td style="width: 35.5167px; height: 69px; text-align: center;">
 <p> </p><p>01</p></td>
 
-<td style="text-align: left; width: 534.417px; height: 69px;"><p><a href="http://www.mathsjournal.org/Volume1/Issue4/IJMCT-V1I4P1.pdf" target="_blank" rel="noopener noreferrer">Boundary Value Problems for First Order Complex Partial Differential Equations in a Ring Domain </a></p>
-<p>Authors: S.Sangeetha, S.Tamilarasi</p></td>
-<td style="width: 92.0667px; height: 69px;"><p> </p><p>IJMCT-V1I4P1</p></td></tr>
-
-<tr style="height: 69px;"><td style="text-align: center;"><p>02</p></td>
-<td><p><a href="http://www.mathsjournal.org/Volume1/Issue4/IJMCT-V1I4P2.pdf" target="_blank" rel="noopener noreferrer">Regular Storngly Connected Sets in Topology</a><br /></p>
-<p>Authors: A. Rathika , R. Vaithiyalingam </p></td>
-<td><p>IJMCT-V1I4P2</p></td></tr>
-
-<tr style="height: 69px;"><td style="text-align: center;"><p>03</p></td>
-<td><p><a href="http://www.mathsjournal.org/Volume1/Issue4/IJMCT-V1I4P3.pdf" target="_blank" rel="noopener noreferrer">Epidemiology is Study of Disease in a Population in Particular</a></p>
-<p>Authors: J. Joseph Edward Michale , M.Ramesh Kumar</p></td>
-<td><p>IJMCT-V1I4P3</p></td></tr>
-
-<tr style="height: 69px;"><td style="text-align: center;"><p>04</p></td>
-<td><p>Removed Paper</a></p>
-<p>Authors: -</p></td>
-<td><p>IJMCT-V1I4P4</p></td></tr>
-
-<tr style="height: 69px;"><td style="text-align: center;"><p>05</p></td>
-<td><p><a href="http://www.mathsjournal.org/Volume1/Issue4/IJMCT-V1I4P5.pdf" target="_blank" rel="noopener noreferrer">Concept of Fuzzy Differential Equations</a> </p>
-<p>Authors: K. Ayyanar , M. Ramesh kumar</p></td>
-<td><p>IJMCT-V1I4P5</p></td></tr>
-
-<tr style="height: 69px;"><td style="text-align: center;"><p>06</p></td>
-<td><p><a href="http://www.mathsjournal.org/Volume1/Issue4/IJMCT-V1I4P6.pdf" target="_blank" rel="noopener noreferrer">Positive Ideal Solution in The Topcis Method</a></p>
-<p>Authors: H. Rajini ,R. Vaithyalingam</p></td>
-<td><p>IJMCT-V1I4P6</p></td></tr>
-
-<tr style="height: 69px;"><td style="text-align: center;"><p>07</p></td>
-<td><p><a href="http://www.mathsjournal.org/Volume1/Issue4/IJMCT-V1I4P7.pdf" target="_blank" rel="noopener noreferrer">The Study of Fuzzy Differential Equations Expanding as New Branch of Fuzzy Mathematics</a></p>
-<p>Authors: N. Karthikeyan, M. Ramesh kumar</p></td>
-<td><p>IJMCT-V1I4P7</p></td></tr>
+<td style="text-align: left; width: 534.417px; height: 69px;"><p><a href="http://www.mathsjournal.org/Volume1/Issue5/IJMCT-V1I5P1.pdf" target="_blank" rel="noopener noreferrer">Mean Labeling of Some Classes of Graphs</a></p>
+<p>Authors: R.Veerappa , S.Tamilarasi </p></td>
+<td style="width: 92.0667px; height: 69px;"><p> </p><p>IJMCT-V1I5P1</p></td></tr>
 
 <tr style="height: 24px;">
 <td style="width: 674px; height: 24px; text-align: center;" colspan="3">Paper uploading is in progress. Author(S) are requested to complete their paper formalities.</td></tr>
