--- a/callforpaper.html
+++ b/callforpaper.html
@@ -502,7 +502,10 @@ were used latex then send it PDF format.</li><br>
   <center><a href="https://scholar.google.co.in" title="google scholar" target="blank"><img src="http://www.internationaljournalisar.org/images/google-scholar.png" alt="IJMCT - ISAR Journals" width="170" height="80" /></a></center></div>
 
 <div class="divround2"   style=" border: 0px solid #0033CC; padding: 0px; " >
-  <center><a href="https://www.mendeley.com/profiles/isar---international-scientif/?viewAsOther=true" title="mendaly" target="blank"><img src="http://www.internationaljournalisar.org/images/mendaly.png" alt="IJMCT - ISAR Journals" width="150" height="60" /></a></center></div>
+<center><a href="https://www.dx.doi.org" title="doi" target="blank"><img src="http://www.internationaljournalisar.org/images/crossref.jpg" alt="IJMCT - ISAR Journals" width="170" height="80" /></a></center></div>
+
+<div class="divround2"   style=" border: 0px solid #0033CC; padding: 0px; " >
+  <center><a href="https://www.mendeley.com/profiles/isar---international-scientif/?viewAsOther=true" title="mendaly" target="blank"><img src="http://www.internationaljournalisar.org/images/mendaly.png" alt="IJMCT - ISAR Journals" width="170" height="80" /></a></center></div>
 
 <div class="divround2"   style=" border: 0px solid #0033CC; padding: 0px; " >
   <center><a href="http://www.internationaljournalisar.org" title="Journals" target="blank"><img src="http://www.internationaljournalisar.org/images/jounals.png" alt="IJMCT - ISAR Journals" width="180" height="110" /></a></center></div>
