--- a/Archives.html
+++ b/Archives.html
@@ -254,11 +254,23 @@ JCEMediaBox.init({popup:{width:"",height:"",legacy:0,lightbox:0,shadowbox:0,resi
     <div class="h3c"><div class="h3r"><div class="h3l"><h3 class="module-title">Our Publication</h3></div></div></div>
     <div class="module-body">
     <ul class="nav menu">
-<li class="item-304"><a href="http://www.ijretjournal.org" title="ISAR-IJRET" target="blank">ISAR - IJRET</a></li>
-<li class="item-302"><a href="http://www.ijcsejournal.org" title="ISAR-IJCSE" target="blank">ISAR - IJCSE</a></li>
-<li class="item-301"><a href="http://www.mathsjournal.org" title="ISAR-IJMCT" target="blank">ISAR - IJMCT</a></li>
-<li class="item-300"><a href="http://www.ijp2p.org" title="ISAR-IJPT" target="blank">ISAR - IJPT</a></li>
-<li class="item-298"><a href="http://www.internationaljournalisar.org" title="ISAR-IJPT" target="blank">More Journals</a></li></ul>
+<li class="item-302"><a href="http://www.engjournal.org" alt="ISAR IJRET" title="International Journal of Research in Engineering Technology" target="blank">ISAR -  ENGINEERING </a></li>
+<li class="item-302"><a href="http://www.ijcsejournal.org" alt="ISAR IJCSE" title="International Journal of Computer Science Engineering Techniques" target="blank">ISAR - IJCSE</a></li>
+<li class="item-301"><a href="http://www.mathsjournal.org" alt="ISAR-IJMCT" title="ISAR International Journal of Mathematics and Computing Techniques" target="blank">ISAR - IJMCT</a></li>
+<li class="item-300"><a href="http://www.ijp2p.org" alt="ISAR-IJPT" title="ISAR International Journal of P2P Network and Techniques" target="blank">ISAR - IJPT</a></li>
+<li class="item-300"><a href="http://www.ijeeejournal.org" alt="ISAR-IJEEE" title="International Journal of Electrical Engineering and Ethics" target="blank">ISAR - IJEEE</a></li>
+<li class="item-300"><a href="http://www.internationaljournalisar.org/IJECE/index.html" alt="ISAR-IJECE" title="International Journal of Electronics and Communication Ethics" target="blank">ISAR - IJECE</a></li>
+<li class="item-298"><a href="http://www.internationaljournalisar.org" title="ISAR Journals" target="blank">More Journals</a></li></ul>
+        </div>
+        </div>
+	</div><br>
+
+ <div class="module">
+    <div class="inner">
+    <div class="h3c"><div class="h3r"><div class="h3l"><h3 class="module-title">Help Link</h3></div></div></div>
+    <div class="module-body">
+    <ul class="nav menu">
+ <img src="http://www.internationaljournalisar.org/images/whatsapp.png" width="30" height="30" alt="Help Desk" /> <strong><font size="3"><a>994046 4920</a>(24x7)</font></strong></ul>
         </div>
         </div>
 	</div><br>
